--- a/index.html
+++ b/index.html
@@ -8,6 +8,23 @@
     <title>single page application</title>
 </head>
 <body>
+    <!-- <template id="login"> -->
+
+        <form class="style-form">
+        <div class="pad">
+            <label class="lable-style-login">Email:</label>
+            <input type='email' autocomplete='username' id='email'/>
+        </div>
+        <div class="pad">
+            <label class="lable-style-login">Password:</label>
+            <input type='password' autocomplete='new-password' />
+        </div>
+        <div class="pad">
+            <input class="sub1" type="submit" value="Login">
+        </div>
+        </form>
+        <!-- partial -->
+    <!-- </template> -->
     <script src="./main.js"></script>
 </body>
 </html>
