save before merge

--- a/index.html
+++ b/index.html
@@ -1,13 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <link href="" rel="icon" type="image/x-icon">
+    <link href="./media/pop-open.jpeg" rel="icon" type="image/x-icon">
     <link href="./style.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>single page application</title>
 </head>
+
 <body>
+    <!-- <template id="game"> -->
+    <h1>Pop Cat</h1>
+    <img id="cat-img" src="./media/pop-closed.jpeg" alt="closed mouth pop cat">
+    <h2>pop counter:</h2>
+    <p id="counter">0</p>
+    <button id="counter-btn">pop</button>
+    <!-- </template> -->
     <script src="./main.js"></script>
 </body>
+
 </html>
