--- a/index.html
+++ b/index.html
@@ -7,33 +7,52 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>single page application</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Playpen+Sans:wght@500&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <div id="login">
-        <form class="style-form">
-            <div class="pad">
-                <label class="lable-style-login">Email:</label>
-                <input  type='email' autocomplete='username' id='email' required/>
+    <div id="page"></div>
+
+    <template id="loginTemp">
+        <style>
+            body {
+                background-image: url("./media/pop-open.jpeg");
+                background-repeat: no-repeat;
+                background-size: cover;
+            }
+        </style>
+        <form class="style-form2" id="login">
+            <div class="style-form">
+                <div class="pad">
+                    <label class="lable-style-login">Email:</label>
+                    <input type='email' autocomplete='username' id='email' required />
+                </div>
+                <div class="pad">
+                    <label class="lable-style-login">Password:</label>
+                    <input type='password' autocomplete='new-password' id="pwrd" required />
+                </div>
+                <p id="validateLogin"></p>
+                <div class="pad">
+                    <button class="sub1" id="submitbtn">login</button>
+                </div>
             </div>
-            <div class="pad">
-                <label class="lable-style-login">Password:</label>
-                <input type='password' autocomplete='new-password' id="pwrd" required/>
-            </div>
-            <div class="pad">
-                <input class="sub1" id="submitbtn" type="submit" value="Login">
-            </div>
-            <p id="validateLogin"></p>
         </form>
-    </div>
+    </template>
 
     <template id="game">
-        <h1>Pop Cat</h1>
-        <img id="cat-img" src="./media/pop-closed.jpeg" alt="closed mouth pop cat">
-        <h2>pop counter:</h2>
-        <p id="counter">0</p>
-        <button id="counter-btn">pop</button>
-        <button id="log-out">log out</button>
+        <div id="game">
+            <h1>Pop Cat</h1>
+            <img id="cat-img" src="./media/pop-closed.jpeg" alt="closed mouth pop cat">
+            <h2>pop counter:</h2>
+            <p id="counter">0</p>
+            <button id="counter-btn">pop</button>
+            <audio id="pop-sound">
+                <source src="./media/pop-94319.mp3">
+            </audio>
+            <button id="log-out">log out</button>
+        </div>
     </template>
     <script src="./main.js"></script>
 </body>
